[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/scripts/interface/TargetCursor.gd" type="Script" id=1]
[ext_resource path="res://assets/texture/interface/hud/target_cursor.png" type="Texture2D" id=2]
[ext_resource path="res://assets/texture/interface/hud/target_circle.png" type="Texture2D" id=3]

[sub_resource type="Animation" id=14]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( -3 ),
"update": 0,
"values": [ Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( -3 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "TargetCursorAppear"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.25, 0.1, 0.25 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.1 ),
"transitions": PackedFloat32Array( 0.3, 0.3 ),
"update": 0,
"values": [ Vector3( 0, 0.25, 0 ), Vector3( 0, -0.2, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "TargetCursorBounce"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3, 0.8 ),
"transitions": PackedFloat32Array( -2, -2, -2 ),
"update": 0,
"values": [ Vector3( 0.2, 0.2, 0.2 ), Vector3( 0.2, 0.3, 0.2 ), Vector3( 0.2, 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5, 0.8, 1.1 ),
"transitions": PackedFloat32Array( -3, -3, 1, -3 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 2, 0 ), Vector3( 0, -0.3, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="CursorTarget" type="Node3D"]
transform = Transform3D( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
script = ExtResource( 1 )

[node name="SpriteCursor" type="Sprite3D" parent="."]
transform = Transform3D( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
pixel_size = 0.1
billboard = 1
render_priority = 5
texture = ExtResource( 2 )

[node name="SpriteCircle" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
pixel_size = 0.03
no_depth_test = true
render_priority = 5
texture = ExtResource( 3 )

[node name="AnimationCursor" type="AnimationPlayer" parent="."]
root_node = NodePath("../SpriteCursor")
anims/RESET = SubResource( 14 )
anims/TargetCursorAppear = SubResource( 15 )
anims/TargetCursorBounce = SubResource( 13 )
